--- a/crimetracker/package.json
+++ b/crimetracker/package.json
@@ -14,6 +14,7 @@
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
     "mongoose": "^5.2.9",
+    "mongoose-geojson-schema": "^2.1.3",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
