--- a/crimetracker/package.json
+++ b/crimetracker/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "bluebird": "^3.5.2",
@@ -17,6 +17,7 @@
     "mongoose": "^5.2.9",
     "mongoose-geojson-schema": "^2.1.3",
     "morgan": "~1.9.0",
+    "nodemon": "^1.18.4",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0",
     "serve-favicon": "^2.5.0",
